name:                tabl
version:             1.0.3
synopsis:            Table layout
description:         Text.Tabl arranges multiple Text instances into a
                     table layout while providing means of alignment
                     visual decoration both horizontally and vertically.
homepage:            https://github.com/lovasko/tabl
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Lovasko <daniel.lovasko@gmail.com>
maintainer:          Daniel Lovasko <daniel.lovasko@gmail.com>
copyright:           2016-2017 Daniel Lovasko
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Tabl 
  other-modules:       Text.Tabl.Alignment
                     , Text.Tabl.Ascii
                     , Text.Tabl.Ascii.Cell
                     , Text.Tabl.Ascii.Decoration
                     , Text.Tabl.Decoration
                     , Text.Tabl.Environment
                     , Text.Tabl.Latex
                     , Text.Tabl.Util
  build-depends:       base >= 4.7 && < 5
                     , safe
                     , text
  default-language:    Haskell2010

executable tabl-example-users
  hs-source-dirs:      examples
  main-is:             Users.hs
  build-depends:       base
                     , unix
                     , tabl
                     , text
  default-language:    Haskell2010

executable tabl-example-multiply
  hs-source-dirs:      examples
  main-is:             Multiply.hs
  build-depends:       base
                     , tabl
                     , text
  default-language:    Haskell2010

executable tabl-example-tictactoe
  hs-source-dirs:      examples
  main-is:             TicTacToe.hs
  build-depends:       base
                     , random
                     , safe
                     , split
                     , tabl
                     , text
  default-language:    Haskell2010

executable tabl-example-constants
  hs-source-dirs:      examples
  main-is:             Constants.hs
  build-depends:       base
                     , tabl
                     , text
  default-language:    Haskell2010

executable tabl-example-decimals
  hs-source-dirs:      examples
  main-is:             Decimals.hs
  build-depends:       base
                     , tabl
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/tabl
